--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assessment-environment",
+  "name": "react-assessment-environment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
